--- a/core/kevoree-resolvers/package.json
+++ b/core/kevoree-resolvers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-resolvers",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Standard Kevoree Javascript resolvers",
   "main": "./kevoree-resolvers.js",
   "scripts": {
@@ -28,7 +28,7 @@
     "kevoree-library": "^0.9.0",
     "npm": "^1.4.16",
     "npm-vers": "^0.1.0",
-    "npmi": "0.0.10",
+    "npmi": "~0.0.11",
     "rimraf": "^2.2.8"
   }
 }
