--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -20,6 +20,7 @@
   "optionalDependencies": {},
   "dependencies": {
     "kevoree-commons": "^0.9.0",
+    "kevoree-kevscript": "^0.9.0",
     "kevoree-library": "^0.9.0",
     "pseudoclass": "^1.0.1"
   },
