--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "1.0.0",
+  "version": "2.0.0-SNAPSHOT.2",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -22,7 +22,7 @@
     "kevoree-commons": "^1.0.0",
     "kevoree-kevscript": "^1.0.0",
     "kevoree-library": "^1.0.0",
-    "pseudoclass": "^1.0.1"
+    "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
 }
