--- a/platform/browser/client/package.json
+++ b/platform/browser/client/package.json
@@ -8,21 +8,21 @@
   "dependencies": {
     "async": "^0.2.10",
     "kevoree-commons": "^1.0.0",
-    "kevoree-core": "^1.0.0",
+    "kevoree-core": "^2.0.0",
     "kevoree-kotlin": "^1.0.0",
     "kevoree-library": "^1.0.0",
     "node-uuid": "^1.4.1",
-    "pseudoclass": "^1.0.1",
+    "pseudoclass": "^1.0.2",
     "underscore.string": "^2.3.3",
     "ws": "^0.4.31"
   },
   "devDependencies": {
     "bower": "^1.3.2",
     "browserify": "^3.32.1",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-bower-install": "~0.7.0",
-    "grunt-browserify": "^1.3.1",
+    "grunt-browserify": "^2.1.4",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
