--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "2.0.0-SNAPSHOT.3",
+  "version": "2.1.0",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
