--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-core",
-  "version": "2.0.0-SNAPSHOT.6",
+  "version": "2.1.0",
   "description": "Kevoree Core",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-core.js",
