--- a/platform/nodejs/package.json
+++ b/platform/nodejs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-nodejs-runtime",
-  "version": "2.0.0-SNAPSHOT.1",
+  "version": "2.0.1",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./lib/NodeJSRuntime",
   "bin": {
